--- a/manifest.plist
+++ b/manifest.plist
@@ -10,7 +10,7 @@
                         <key>kind</key>
                         <string>software-package</string>
                         <key>url</key>
-                        <string>https://github.com/LeoAiolia/ipa_down/blob/main/ipa/YuxiaorReborn-v9.3.7.ipa</string>
+                        <string>https://static.yuxiaor.com/YuxiaorReborn-v9.3.7.ipa</string>
                     </dict>
                     <dict>
                         <key>kind</key>
@@ -30,11 +30,11 @@
                     <key>bundle-identifier</key>
                      <string>com.yuxiaor.Yuxiaor</string>
                      <key>bundle-version</key>
-                    <string>9.3.7</string><!--修改这里-->
+                    <string>9.3.7</string>
                     <key>kind</key>
                     <string>software</string>
                     <key>title</key>
-                    <string>寓小二</string><!--修改这里-->
+                    <string>寓小二</string>
                 </dict>
             </dict>
         </array>
